# GPT-SoVITS

./: Dockerfile  docker-compose.yaml  dockerbuild.sh  fix_imports.py  pyproject.toml  requirements.txt
Docker/: download.py
GPT_SoVITS/: download.py  export_torch_script.py  export_torch_script_v3.py  inference_gui.py  inference_webui.py  inference_webui_fast.py  onnx_export.py  s1_train.py  s2_train.py  s2_train_v3.py  s2_train_v3_lora.py
GPT_SoVITS/AR/models/: t2s_lightning_module_onnx.py  t2s_model_onnx.py
GPT_SoVITS/AR/modules/: activation_onnx.py
GPT_SoVITS/BigVGAN/: discriminators.py  inference.py  train.py
GPT_SoVITS/TTS_infer_pack/: TTS.py
GPT_SoVITS/feature_extractor/: cnhubert.py
GPT_SoVITS/module/: attentions_onnx.py  data_utils.py  models_onnx.py
GPT_SoVITS/prepare_datasets/: 1-get-text.py  2-get-hubert-wav32k.py  3-get-semantic.py
GPT_SoVITS/text/: cantonese.py  cleaner.py  korean.py
GPT_SoVITS/tools/: my_utils.py  slice_audio.py
GPT_SoVITS/tools/asr/: fasterwhisper_asr.py
GPT_SoVITS/tools/tools/: my_utils.py  slice_audio.py
GPT_SoVITS/tools/uvr5/: bsroformer.py  vr.py  webui.py
GPT_SoVITS/tools/uvr5/bs_roformer/: bs_roformer.py
