[project]
name = "gpt-sovits"
version = "0.1.1"
description = "The GPT SoVITS project with modern project.toml and bundle tools package together"
authors = [
    { name = "Tea", email = "no-reply@gmail.com" }
]
dependencies = [
    "Faster_Whisper",
    "LangSegment>=0.2.0",
    "PyYAML",
    "chardet",
    "cn2an",
    "fastapi<0.112.2",
    "ffmpeg-python",
    "funasr==1.0.27",
    "g2p_en",
    "g2pk2",
    "gradio>=4.0, <=4.24.0",
    "jieba",
    "jieba_fast",
    "ko_pron",
    "librosa==0.9.2",
    "modelscope==1.10.0",
    "numba==0.56.4",
    "numpy==1.23.4",
    "onnxruntime ; sys_platform == 'darwin'",
    "onnxruntime-gpu ; sys_platform != 'darwin'",
    "opencc ; sys_platform != 'linux'",
    "psutil",
    "pyjyutping",
    "pyopenjtalk>=0.3.4",
    "pypinyin",
    "python_mecab_ko ; sys_platform != 'win32'",
    "pytorch-lightning",
    "rotary_embedding_torch",
    "scipy",
    "sentencepiece",
    "tensorboard",
    "torchaudio",
    "tqdm",
    "transformers",
    "wordsegment",
    "pyqt5>=5.15.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["GPT_SoVITS"]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
