[project]
name = "gpt-sovits"
version = "0.1.0"
description = "A Powerful Few-shot Voice Conversion and Text-to-Speech WebUI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=11",
    "bowler>=0.9.0",
    "chardet>=5.2.0",
    "cn2an>=0.5.23",
    "ctranslate2>=4.0,<5",
    "fast-langdetect>=0.3.1",
    "fastapi[standard]>=0.115.2",
    "ffmpeg-python>=0.2.0",
    "funasr==1.0.27",
    "g2p-en>=2.1.0",
    "g2pk2>=0.0.3",
    "gradio<5",
    "huggingface-hub>=0.13",
    "jieba>=0.42.1",
    "jieba-fast>=0.53",
    "ko-pron>=1.3",
    "librosa==0.10.2",
    "modelscope==1.10.0",
    "numba>=0.61.2",
    "numpy<2.0",
    "onnxruntime>=1.21.1 ; sys_platform == 'darwin'",
    "onnxruntime-gpu>=1.21.1 ; sys_platform != 'darwin'",
    "opencc==1.1.1 ; sys_platform == 'linux'",
    "opencc>=1.1.1 ; sys_platform != 'linux'",
    "peft>=0.15.2",
    "psutil>=7.0.0",
    "pydantic<=2.10.6",
    "pyopenjtalk>=0.4.1",
    "pypinyin>=0.54.0",
    "python-mecab-ko>=1.3.7 ; sys_platform != 'win32'",
    "pytorch-lightning>=2.4",
    "pyyaml>=6.0.2",
    "rotary-embedding-torch>=0.8.6",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "split-lang>=2.1.0",
    "tensorboard>=2.19.0",
    "tojyutping>=3.2.0",
    "tokenizers>=0.13,<1",
    "torchaudio>=2.6.0",
    "torchmetrics<=1.5",
    "tqdm>=4.67.1",
    "transformers>=4.43",
    "wordsegment>=1.3.1",
    "x-transformers>=2.3.1",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
]
cu128 = [
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/Docker",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["GPT_SoVITS", "tools"]

[tool.check-wheel-contents]
toplevel = ["GPT_SoVITS", "tools"]
